Fixed shape error in comments

--- a/SqueezeNet.ipynb
+++ b/SqueezeNet.ipynb
@@ -123,7 +123,7 @@
         "    // 32x32x3 -> 15x15x64\n",
         "    var conv1 = Conv2D<Float>(\n",
         "        filterShape: (3, 3, 3, 64), \n",
-        "        padding: .same,\n",
+        "        padding: .valid,\n",
         "        activation: relu \n",
         "    )\n",
         "    // 15x15x64 -> 15x15x128\n",
@@ -139,7 +139,7 @@
         "    var drop = Dropout<Float>(probability: 0.5)\n",
         "    // 7x7x256 ->  7x7xnumClasses\n",
         "    var reduce: Conv2D<Float> \n",
-        "    // 7x7x256 ->  1x1xnumClasses\n",
+        "    // 7x7xnumClasses ->  numClasses\n",
         "    var globalPool = GlobalAvgPool2D<Float>()\n",
         "    \n",
         "    public init(_ numClasses: Int){\n",
